Fixed Spacing for sponsors

--- a/assets/style.css
+++ b/assets/style.css
@@ -462,9 +462,8 @@ div.category ul li {
     margin-right: 0;
 }
 
-.row{
-  margin-top: 30px;
-  margin-bottom: 30px
+#sponsors{
+  margin-bottom: 45px
 }
 
 /*locations*/
